--- a/resources/com/popup/style/popup.styl
+++ b/resources/com/popup/style/popup.styl
@@ -6,7 +6,7 @@
   width 100%
   height 100%
   overflow auto
-  background-color rgba(0, 0, 0, 0.3)
+  //background-color rgba(0, 0, 0, 0.3)
   text-align center
   &:before
     content: ""
